ZH/6.0/开发指南/蓝鲸错误码/monitor.md
# 监控平台错误码

一共 7 位, 前两位 33, 中间两位模块编号, 最后两位具体错误码

## 自身服务出错

```plain
#告警配置
E01000 = ErrorCode("01000", u"告警配置异常：排查告警配置表")
E01001 = ErrorCode("01001", u"告警配置异常，排查告警配置表 alarm_source")
E01002 = ErrorCode("01002", u"告警配置异常，排查通知配置表 notice_config")
E01003 = ErrorCode("01003", u"告警配置异常，排查收敛配置表 shield_config")
E01004 = ErrorCode("01004", u"告警配置异常，排查自动处理配置表 solution_config")
# collect
E01010 = ErrorCode("01010", u"告警汇总模块异常，排查 collect 模块")
# data_access
E01020 = ErrorCode("01020", u"数据接入模块异常，排查 data_access 模块")
# detect
E01030 = ErrorCode("01030", u"异常检测模块异常，排查 detect 模块")
# converge
E01040 = ErrorCode("01040", u"告警收敛模块出错，排查 converge 模块")
```

```plain
- 3300002: 自定义异常"
- 3300003: 未知错误"
- 3300004: RESTAPI返回错误"
- 3300007: 缺少用户信息"
- 3301001: API请求错误"
- 3308003: tsdb表名解析异常"
- 3308004: sql查询异常"
- 3308005: sql查询无数据"
- 3308006: dataid不存在"
- 3309001: 数据源模块错误"
- 3309002: 数据源不存在"
- 3310001: 插件模块错误"
- 3310002: 插件包解析错误"
- 3310003: 插件ID已存在"
- 3310004: 插件ID不存在"
- 3310005: 打包失败"
- 3310006: 注册插件失败"
- 3310007: 插件版本不存在"
- 3310008: 插件签名格式无效"
- 3310009: 插件签名协议不存在"
- 3310010: 不支持签名的插件类型"
- 3310011: 无插件编辑权限"
- 3310012: 无插件删除权限"
- 3310013: 不支持的插件类型"
- 3310014: 插件存在关联项"
- 3310015: 插件导出错误"
- 3310016: 是否支持远程采集冲突"
- 3310017: 节点管理导出超时"
- 3310018: 插件业务切换错误"
- 3310018: 节点管理删除插件失败"
- 3312001: 通知组模块错误"
- 3312002: 通知组ID不存在"
- 3312003: 通知组名称已存在"
- 3312004: 通知组无法删除"
- 3312005: 创建通知组失败"
- 3313001: 策略配置模块错误"
- 3313002: StrategyConfig实例初始化错误"
- 3313003: 策略配置不存在"
- 3313004: 监控对象数据结构错误"
- 3313005: 监控目标解析失败"
- 3313006: 监控目标为空"
- 3313007: 获取一级标签失败"
- 3313008: 创建策略配置失败"
- 3313009: 修改策略配置失败"
- 3314001: 告警事件模块错误"
- 3314002: 告警事件不存在"
- 3314003: 非时序数据类型"
- 3314004: 聚合方法是实时"
- 3316001: 内置指标元数据错误"
- 3316002: 该内置指标不存在"
- 3316003: metric_id格式错误"
- 3316004: 获取指标元信息参数错误"
- 3316005: 指标单位id无效"
- 3316005: 指标单位id对应分类不存在"
- 3317001: 导入导出模块错误"
- 3317002: 导入历史不存在"
- 3317003: 添加统一监控目标失败"
- 3317004: 上传导入包失败"
- 3317005: 导入配置失败"
- 3317006: 上传导入包失败"
- 3318001: 升级模块错误"
- 3318002: 当前不允许数据迁移"
- 3318003: 获取待迁移内容失败"
- 3318004: 数据迁移失败"
- 3318005: 同步旧版本文件失败"
- 3318006: 插件导出失败"
- 3318007: 创建默认策略失败"
- 3319000: 移动端事件模块错误"
- 3319001: 告警汇总记录不存在"
- 3319002: 告警事件不存在"
- 3320001: 拨测模块错误"
- 3320002: bkmonitorbeat进程异常或版本小于1.4.10，请至节点管理处理"
- 3320003: 未知的拨测协议类型"
- 3321001: 告警屏蔽模块错误"
- 3321002: 告警屏蔽ID不存在"
- 3321003: 重复屏蔽"
- 3322001: 权限配置错误"
- 3322002: 没有修改权限"
- 3335001: 事件分组名称校验不通过"
- 3335005: 自定义时序名称校验不通过"
- 3350000: 告警后台服务错误"
- 3350001: 分布式锁错误"
- 3350002: 策略配置快照找不到"
- 3350003: 策略对应的监控项找不到"
- 3351000: 数据接入服务错误"
- 3351201: 无效的自定义异常数据"
- 3352000: 异常检测服务错误"
- 3352001: 无效的检测数据"
- 3352002: 无效的检测算法配置"
- 3352003: 无效的静态阈值算法配置"
- 3352004: 无效的简易环比算法配置"
- 3352005: 无效的简易同比算法配置"
- 3352006: 无效的高级环比算法配置"
- 3352007: 无效的高级同比算法配置"
- 3352008: 历史数据不存在"
- 3353000: 异常触发服务错误"
- 3399001: 动作ID不存在"
- 3399002: 资源ID不存在"
```

## 依赖第三服务出错

```plain
E02010 = ErrorCode("02010", u"调用ESB出错，排查ESB服务")
E02020 = ErrorCode("02020", u"数据模块查询异常，排查数据模块数据查询服务")
E02030 = ErrorCode("02030", u"Ping告警格式错误，排查GSE SERVER服务")
```

## 依赖基础服务出错

```plain
E03010 = ErrorCode("03010", u"redis 服务出错，排查 redis 服务")
E03020 = ErrorCode("03020", u"beanstalk 服务出错，排查 beanstalk 服务")
E03030 = ErrorCode("03030", u"kafka  服务出错，排查 kafka 服务")
```

> 参考 PaaS 的做法

- 定义枚举或常量错误码到工程

- 关键路径错误, 将错误码打到日志 message 前面, 空格分隔 `logger.exception("%s %s" % (code, message))`

- 关键路径: 调用第三方服务出错 依赖基础服务出错 本身配置出错等

- 最后给出添加的错误码-原因-解决方案, 例如 1301000 settings_error 配置错误 排查配置 1301001 appengienNotAvailable 无法访问 排查 appengine 服务正常
